Add docker config, gnu stow to softwares

--- a/linux/home-vm/.softwares-m/softwares.yml
+++ b/linux/home-vm/.softwares-m/softwares.yml
@@ -59,6 +59,7 @@ software_categories:
         - htop
         - grsync
         - bleachbit
+        - stow
     - terminal:
         - terminator
     - gnome:
