--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -1,1 +1,22 @@
 set -g default-terminal "screen-256color"
+
+#--- plugins - begin ---
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+#--- plugins - end   ---
+
+# Restore Vim sessions
+set -g @resurrect-strategy-vim 'session'
+
+# Restore Panes
+set -g @resurrect-capture-pane-contents 'on'
+
+# Restore last saved environment (automatically)
+set -g @continuum-restore 'on'
+
+# Start tmux on boot/reboot
+set -g @continuum-boot 'on'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
