--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -7,3 +7,6 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+# Show pane numbers for this milliseconds
+set -g display-panes-time 4000
