fix: [gitattrinbutes] Fix file paths
After the refactor this file was not updated so updated it now.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,6 @@
 # help github linguist to detect language and highlight syntax
-dot-ssh/config linguist-language=sshconfig
+ssh/dot-ssh/config linguist-language=sshconfig
 gitconfig/dot-gitconfig linguist-language=gitconfig
-shell/bashrc/**/dot-bashrc linguist-language=bash
-shell/zshrc/**/dot-zshrc linguist-language=zsh
+bashrc/dot-bashrc linguist-language=bash
+zshrc/dot-zshrc linguist-language=zsh
 vimrc/dot-vimrc linguist-language=vim
