--- a/tmux.conf/dot-tmux.conf
+++ b/tmux.conf/dot-tmux.conf
@@ -11,3 +11,8 @@ run '~/.tmux/plugins/tpm/tpm'
 
 # Show pane numbers for this milliseconds
 set -g display-panes-time 4000
+
+# Set new panes to open in current directory
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
