--- a/tmux.conf/dot-tmux.conf
+++ b/tmux.conf/dot-tmux.conf
@@ -1,4 +1,4 @@
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 setw -g mode-keys vi
 
 #--- plugins - begin ---
