--- a/tmux.conf/dot-tmux.conf
+++ b/tmux.conf/dot-tmux.conf
@@ -12,6 +12,10 @@ run '~/.tmux/plugins/tpm/tpm'
 # Show pane numbers for this milliseconds
 set -g display-panes-time 4000
 
+# Set status style
+set-option -g status-style fg=green,bg=terminal
+set-option -g window-status-current-style fg=orange
+
 # Set new panes to open in current directory
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
