--- a/dot-tmux.conf
+++ b/dot-tmux.conf
@@ -20,3 +20,6 @@ set-option -g window-status-current-style fg=orange
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+
+# Set keybindings
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
