--- a/dot-tmux.conf
+++ b/dot-tmux.conf
@@ -6,9 +6,6 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 #--- plugins - end   ---
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
-
 # Show pane numbers for this milliseconds
 set -g display-panes-time 4000
 
@@ -22,4 +19,9 @@ bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
 # Set keybindings
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel \
+  'xclip -in -selection clipboard'
+
+# Initialize TMUX plugin manager
+# NOTE Keep this line at the very bottom of tmux.conf
+run '~/.tmux/plugins/tpm/tpm'
